add raw urls for images?

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 						<!-- Art Gallery -->
 							<div class="gallery style2 small lightbox onscroll-fade-in">
 								<article>
-									<a href="art/violin_white.jpg" class="image">
-										<img src="images/art/thumbs/violin_white_thumb.jpg" alt="" />
+									<a href="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/violin_white.jpg" class="image">
+										<img src="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/violin_white_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Mixed Violin White</h3>
@@ -107,8 +107,8 @@
 								</article>
 
 								<article>
-									<a href="images/art/one_perspective_torii.jpg" class="image">
-										<img src="images/art/thumbs/one_perspective_torii_thumb.jpg" alt="" />
+									<a href="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/one_perspective_torii.jpg" class="image">
+										<img src="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/thumbs/one_perspective_torii_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Portals, Japan</h3>
@@ -119,8 +119,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/art/naruto_tree.jpg" class="image">
-										<img src="images/art/thumbs/naruto_tree_thumb.jpg" alt="" />
+									<a href="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/naruto_tree.jpg" class="image">
+										<img src="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/thumbs/naruto_tree_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Sadness and Sorrow</h3>
@@ -131,8 +131,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/art/violin_black.jpg" class="image">
-										<img src="images/art/thumbs/violin_black_thumb.jpg" alt="" />
+									<a href="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/violin_black.jpg" class="image">
+										<img src="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/thumbs/violin_black_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Mixed Violin Black</h3>
@@ -143,8 +143,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/art/mixed_materials.jpg" class="image">
-										<img src="images/art/thumbs/mixed_materials_thumb.jpg" alt="" />
+									<a href="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/mixed_materials.jpg" class="image">
+										<img src="https://raw.githubusercontent.com/samuelshih/samuelshih.github.io/master/images/art/thumbs/mixed_materials_thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Mixed Materials</h3>
