--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
 									<p>Built Caviar with Ruby on Rails. FactoryGirl, RSpec.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
+									<span class="icon style2 major fa-bar-chart"></span>
 									<h3>Machine Learning</h3>
 									<p>Courses in Aritifical Intelligence, ML. Tensorflow, SciPy, Numpy, Pandas.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-bar-chart"></span>
+									<span class="icon style2 major fa-code"></span>
 									<h3>C/C++</h3>
 									<p>STL, UnitTest++, Data Structures, IA-32 Assembly Language, p-thread parallel programming</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-wifi"></span>
+									<span class="icon style2 major fa-terminal"></span>
 									<h3>Python</h3>
 									<p>Python2, Python3, Unit Tests.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-cog"></span>
+									<span class="icon style2 major fa-eye"></span>
 									<h3>Computer Vision</h3>
 									<p>OpenCV, Python, Linear Algebra, Graphics, Photoshop.</p>
 								</section>
