--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 						<div class="content">
 							<h1 class="major">Sam Shih</h1>
 							<p class="major">Hi I'm Sam! I'm from San Francisco, California and am currently a junior at
-							Swarthmore College. I'm majoring in Computer Science and Asian studies.
-							Starting 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
+								Swarthmore College. I'm majoring in Computer Science and Asian studies. I joined <a href="https://zerofinancial.com">Zero's</a>
+								founding engineering team in 2017 as their first intern
+							In 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
 							engineers then continued building Caviar after its
-							<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.
+							<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.</p>
+							<p class="major">
 							On campus I sing in the choir, draw <a href="#art" class="smooth-scroll-middle">art</a>, and powerlift.
 							You can catch me writing about positive psychology,
 							self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.<!--]--></p>
@@ -47,13 +49,36 @@
 					<div class="inner">
 						<h2>Experience</h2>
 						<div class="index align-left">
+							<!--Zero-->
+								<section>
+									<header>
+										<h2>Zero</h2>
+										<h4>Engineering Intern</h4>
+										<h5>May 2017 - August 2017 (4 mo.)</h5>
+										<img class="image zero" src="images/logos/zero.png" alt="zero" />
+									</header>
+									<div class="content">
+										<p>Part of Zero's founding engineering team, first intern.</p>
+										<ul>
+											<li>Led the proposals, spec/RFC writing, and helped build a transaction processing
+											API with Elixir and Phoenix.</li>
+											<li>Created internal tools with Django, Unix, CircleCI to help deploy and monitor
+											resources on AWS and Docker.</li>
+											<li>Helped architect Zero's technical infrastructure, dividing a monolith service
+											into independent microservices and databases to handle separate concerns.</li>
+											<li>Implemented a fault-tolerant, open source log agregator that helped Zero debug
+											deploys and keep a lifetime record of audit logs.</li>
+									</ul>
+
+									</div>
+								</section>
 
 							<!-- Square -->
 								<section>
 									<header>
 										<h2>Square</h2>
 										<h4>Engineering Intern</h4>
-										<h5>August 2014 - August 2015</h5>
+										<h5>August 2014 - August 2015 (1 yr.)</h5>
 										<img class="image logo" src="images/logos/square.png" alt="square" />
 									</header>
 									<div class="content">
@@ -65,7 +90,8 @@
 											<li>Created the backend for disabling merchants allowing relevant teams to
 												always be notified whenever restaurants run out of ingredients, experience app
 												issues, or reach their maximum order volume</li>
-											<li>Built many feature requests in the admin codebase</li>
+											<li>Built a tool with Ruby on Rails that allowed merchants to concretely measure
+											their profit margins after partnering with Caviar.</li>
 									</ul>
 
 									</div>
@@ -76,7 +102,7 @@
 										<header>
 											<h2>Caviar</h2>
 											<h4>Engineering Intern</h4>
-											<h5>June 2014 - August 2014</h5>
+											<h5>June 2014 - August 2014 (3 mo.)</h5>
 												<img class="image logo" src="images/logos/caviar.jpg" alt="caviar" />
 										</header>
 										<div class="content">
@@ -84,7 +110,7 @@
 											<ul>
 												<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
 												<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
-												<li>Started the new internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
+												<li>Built Caviar's internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
 											</ul>
 										</div>
 									</section>
@@ -182,13 +208,17 @@
 					<div class="content">
 						<h2>Mindful</h2>
 						<h3>Inspiration</h3>
-						<p>We believe that your behavior online, communication with friends, interactions with your smartphone all relate to how you're feeling throughout the day. We thought - wouldn't it be helpful to track your mental health and emotions as you use your phone?</p>
+						<p>We believe that your behavior online, communication with friends, and interactions with your
+							smartphone all relate to how you're feeling throughout the day. We thought - wouldn't it be
+							helpful to track your mental health and emotions as you use your phone?</p>
 						<h3>About</h3>
-						<p>Mindful is an iOS keyboard that helps you document your mental health passively. Just by using your iPhone, you'll get data recorded analyzing your emotions throughout the day. You can see this data represented with line and radar graphs on your personal dashboard.</p>
+						<p>Mindful is an iOS keyboard that helps you document your mental health passively. Just by
+							using your iPhone, you'll get data recorded analyzing your emotions throughout the day.
+							You can see this data represented with line and radar graphs on your personal dashboard.</p>
 						<ul class="actions vertical">
 							<li><a href="https://devpost.com/software/mindful-t7ovb5" target="_blank" class="button">Learn More</a></li>
 						</ul>
-						<!-- <a href="https://www.github.com/samuelshih/mindful" target="_blank" class="icon small fa-github"><span class="label">Github</span></a> -->
+						 <!--<a href="https://www.github.com/samuelshih/mindful" target="_blank" class="icon small fa-github"><span class="label">Github</span></a>-->
 					</div>
 					<div class="image">
 						<img id="mindful" src="images/mindful.png" alt="mindful" />
@@ -219,7 +249,7 @@
 								<section>
 									<span class="icon style2 major fa-terminal"></span>
 									<h3>Python</h3>
-									<p>Python2, Python3, Unit Tests.</p>
+									<p>Python2, Python3, Django, Flask, UnitTest</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-eye"></span>
@@ -229,14 +259,14 @@
 								<section>
 									<span class="icon style2 major fa-cog"></span>
 									<h3>DevOps</h3>
-									<p>Heroku, AWS, MySQL</p>
+									<p>Heroku, AWS, MySQL, Postgres, Continuous Integration, Docker, Nginx, Terraform.</p>
 								</section>
 							</div>
 						</div>
 					</section>
 
 				<!-- Contact -->
-				<section class="wrapper style1 align-center color1 invert">
+				<!-- <section class="wrapper style1 align-center color1 invert">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
@@ -257,7 +287,7 @@
 								</ul>
 							</form>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer Social Media Icons -->
 				<footer class="wrapper style1 align-center invert color1">
@@ -265,7 +295,7 @@
 							<ul class="icons">
 								<li><a href="https://www.github.com/samuelshih" target="_blank" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.instagram.com/samyoshih" target="_blank" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-		  					<li><a href="http://samshih.me" target="_blank" class="icon style2 fa-wordpress"><span class="label">Email</span></a></li>
+		  						<li><a href="http://samshih.me" target="_blank" class="icon style2 fa-wordpress"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/shihsamuel/" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:sam_shih@icloud.com" target="_blank" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
