updated info with research stuff

--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
 					<section class="banner style5 fullscreen content-align-left image-position-right fullscreen onload-image-fade-down onscroll-content-fade-left invert">
 						<div class="content">
 							<h1 class="major">Sam Shih</h1>
-							<p class="major">Hi I'm Sam! I'm from San Francisco, California and am currently a junior at
+							<p class="major">Hi I'm Sam! I'm from San Francisco, California and am currently a senior at
 								Swarthmore College. I'm majoring in Computer Science and Asian studies. I joined <a href="https://zerofinancial.com">Zero's</a>
 								founding engineering team in 2017 as their first intern
 							In 2014, I joined <a href="https://trycaviar.com">Caviar</a> as one of the first
 							engineers then continued building Caviar after its
 							<a href="https://squareup.com/news/square-acquires-caviar">acquisition</a> by Square.</p>
 							<p class="major">
-							On campus I sing in the choir, draw <a href="#art" class="smooth-scroll-middle">art</a>, and powerlift.
-							You can catch me writing about positive psychology,
-							self-improvement, and my college experience on my <a href="http://samshih.me">blog</a>.<!--]--></p>
+							On campus I sing in the choir, do <a href="#art" class="smooth-scroll-middle">art</a>, and play badminton.
 							<ul class="actions vertical">
 								<li><a href="#experience" class="button big wide smooth-scroll-middle">About Me</a></li>
 							</ul>
@@ -48,7 +46,23 @@
 				<section class="wrapper style1 align-center" id="experience">
 					<div class="inner">
 						<h2>Experience</h2>
+						<h4>For more details, <a href="mailto:sam_shih@icloud.com" target="_blank">email</a> me and I'll happily send over a copy of my resumé</h4>
 						<div class="index align-left">
+							<!--Swarthmore CS Research-->
+								<section>
+									<header>
+										<h2>Swarthmore College</h2>
+										<h4>Computer Networks Research Assistant</h4>
+										<h5>June 2018 - August 2018 (3 mo.)</h5>
+										<img class="image zero" src="images/logos/swarthmore.png" alt="zero" />
+									</header>
+									<div class="content">
+										<p>Researching and designing architectures in the Linux OS with Python and
+											Linux Raw Sockets that can dynamically switch between any transport
+											layer protocol (TCP, UDP, SCTP, QUIC, etc.) with zero added latency.</p>
+									</div>
+								</section>
+
 							<!--Zero-->
 								<section>
 									<header>
@@ -58,18 +72,8 @@
 										<img class="image zero" src="images/logos/zero.png" alt="zero" />
 									</header>
 									<div class="content">
-										<p>Part of Zero's founding engineering team, first intern.</p>
-										<ul>
-											<li>Led the proposals, spec/RFC writing, and helped build a transaction processing
-											API with Elixir and Phoenix.</li>
-											<li>Created internal tools with Django, Unix, CircleCI to help deploy and monitor
-											resources on AWS and Docker.</li>
-											<li>Helped architect Zero's technical infrastructure, dividing a monolith service
-											into independent microservices and databases to handle separate concerns.</li>
-											<li>Implemented a fault-tolerant, open source log agregator that helped Zero debug
-											deploys and keep a lifetime record of audit logs.</li>
-									</ul>
-
+										<p>Part of Zero's founding engineering team, first intern. Architected and built infrastructure
+											 with AWS, Docker, Python, Elixir, Phoenix.</p>
 									</div>
 								</section>
 
@@ -82,18 +86,8 @@
 										<img class="image logo" src="images/logos/square.png" alt="square" />
 									</header>
 									<div class="content">
-										<p>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive tests for all features. Part of a 25-person engineering team, using Ruby on Rails, Heroku, AWS, MySQL.</p>
-										<ul>
-											<li>Built an internal marketing bot that helps General Managers in
-												 16+ cities manage courier job listings, ensuring we always had
-												 couriers to decrease the time it takes to launch markets in new regions</li>
-											<li>Created the backend for disabling merchants allowing relevant teams to
-												always be notified whenever restaurants run out of ingredients, experience app
-												issues, or reach their maximum order volume</li>
-											<li>Built a tool with Ruby on Rails that allowed merchants to concretely measure
-											their profit margins after partnering with Caviar.</li>
-									</ul>
-
+										<p>Styled pages on the front end, developed tools for internal operations and content management, and wrote extensive tests for all features</p>
+										<p>Part of a 25-person engineering team, using Ruby on Rails, Heroku, AWS, MySQL.</p>
 									</div>
 								</section>
 
@@ -107,11 +101,6 @@
 										</header>
 										<div class="content">
 											<p>Mentored by two technical founders, worked with the full Rails stack to build the startup in rapid iterations. One of the first 6 engineers, first intern.</p>
-											<ul>
-												<li>Migrated the front/back end codebase from Rails 3 to Rails 4</li>
-												<li>Built and styled the landing, cart checkout, landing, merchant, contact, help, and TOS pages</li>
-												<li>Built Caviar's internal CMS tool so other teams (marketing, dispatchers, ops) could access the database</li>
-											</ul>
 										</div>
 									</section>
 									<!-- <ul class="actions resume">
@@ -232,14 +221,14 @@
 							<h2>Skills</h2>
 							<div class="items style3 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-diamond"></span>
-									<h3>Ruby</h3>
-									<p>Built Caviar with Ruby on Rails. FactoryGirl, RSpec.</p>
+									<span class="icon style2 major fa-code"></span>
+									<h3>Python</h3>
+									<p>Django, Unittests, Socket Programming, Parallel Programming</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-bar-chart"></span>
 									<h3>Machine Learning</h3>
-									<p>Courses in Aritifical Intelligence, ML. Tensorflow, SciPy, Numpy, Pandas.</p>
+									<p>Courses in Aritifical Intelligence, ML. Tensorflow, Numpy. Bioinformatics experience.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-code"></span>
@@ -248,8 +237,8 @@
 								</section>
 								<section>
 									<span class="icon style2 major fa-terminal"></span>
-									<h3>Python</h3>
-									<p>Python2, Python3, Django, Flask, UnitTest</p>
+									<h3>Networks</h3>
+									<p>Raw Sockets, Linux OS, Transport layer</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-eye"></span>
